cbits/Bullet.h

int btCollisionShape_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btCollisionShape::* )(  ) const
char const * btCollisionShape_getName(void *c); //method: getName char const * ( ::btCollisionShape::* )(  ) const
int btCollisionShape_isCompound(void *c); //method: isCompound bool ( ::btCollisionShape::* )(  ) const
int btCollisionShape_isPolyhedral(void *c); //method: isPolyhedral bool ( ::btCollisionShape::* )(  ) const
void btCollisionShape_setLocalScaling(void *c,float* p0); //method: setLocalScaling void ( ::btCollisionShape::* )( ::btVector3 const & ) 
void btCollisionShape_getAabb(void *c,float* p0,float* p1,float* p2); //method: getAabb void ( ::btCollisionShape::* )( ::btTransform const &,::btVector3 &,::btVector3 & ) const
float btCollisionShape_getContactBreakingThreshold(void *c,float p0); //method: getContactBreakingThreshold ::btScalar ( ::btCollisionShape::* )( ::btScalar ) const
int btCollisionShape_isConvex(void *c); //method: isConvex bool ( ::btCollisionShape::* )(  ) const
int btCollisionShape_isInfinite(void *c); //method: isInfinite bool ( ::btCollisionShape::* )(  ) const
void* btCollisionShape_getUserPointer(void *c); //method: getUserPointer void * ( ::btCollisionShape::* )(  ) const
int btCollisionShape_isNonMoving(void *c); //method: isNonMoving bool ( ::btCollisionShape::* )(  ) const
float btCollisionShape_getMargin(void *c); //method: getMargin ::btScalar ( ::btCollisionShape::* )(  ) const
void btCollisionShape_setMargin(void *c,float p0); //method: setMargin void ( ::btCollisionShape::* )( ::btScalar ) 
int btCollisionShape_isConvex2d(void *c); //method: isConvex2d bool ( ::btCollisionShape::* )(  ) const
int btCollisionShape_isSoftBody(void *c); //method: isSoftBody bool ( ::btCollisionShape::* )(  ) const
void btCollisionShape_calculateTemporalAabb(void *c,float* p0,float* p1,float* p2,float p3,float* p4,float* p5); //method: calculateTemporalAabb void ( ::btCollisionShape::* )( ::btTransform const &,::btVector3 const &,::btVector3 const &,::btScalar,::btVector3 &,::btVector3 & ) const
int btCollisionShape_isConcave(void *c); //method: isConcave bool ( ::btCollisionShape::* )(  ) const
float btCollisionShape_getAngularMotionDisc(void *c); //method: getAngularMotionDisc ::btScalar ( ::btCollisionShape::* )(  ) const
void btCollisionShape_serializeSingleShape(void *c,void* p0); //method: serializeSingleShape void ( ::btCollisionShape::* )( ::btSerializer * ) const
//not supported method: getBoundingSphere void ( ::btCollisionShape::* )( ::btVector3 &,::btScalar & ) const
// error: ::btVector3 & - ok,  - unsupported, void - ok

int btCollisionShape_getShapeType(void *c); //method: getShapeType int ( ::btCollisionShape::* )(  ) const
void btCollisionShape_m_shapeType_set(void *c,int a); //attribute: int btCollisionShape->m_shapeType
int btCollisionShape_m_shapeType_get(void *c); //attribute: int btCollisionShape->m_shapeType
void btCollisionShape_m_userPointer_set(void *c,void* a); //attribute: void * btCollisionShape->m_userPointer
void* btCollisionShape_m_userPointer_get(void *c); //attribute: void * btCollisionShape->m_userPointer
void* btCollisionShapeData_new(); //constructor: btCollisionShapeData  ( ::btCollisionShapeData::* )(  ) 